# BasicNet

./: CMakeLists.txt  README.md
cmake/: toolchain.cmake
src/core/: gpu_base.cpp  gpu_base.hpp  gpu_matrix.cpp  gpu_matrix.hpp
tests/cudaLoadTest/: compile.sh  cudaLoadTest.cpp  cudaLoadTest.cu  main  main2  main3  main4
